an actual competent developer who knows what they're doing,  which is a rare
sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
11/05/2025:
[!] I noticed people talking about the site freezing, if anyone experiencing
this issue can email me a video of it happening, please send it to
nonamegamescontact@proton.me, it'd be greatly appreciated.
[+] Made Minecraft 1.8.8 use web assembly (WASM) making it faster, and not
multiplayer-only. (Maybe a little faster than 1.12.2!)
[+] Fixed the email button opening my email in the same page, causing it to
not load.
[+] Made the "Contact" button at the top scroll to the contact information.
[+] Added Friday Night Funkin' (Thanks for the suggestion!)
[+] Fixed Bad Piggies (Thanks for the bug report Theo)

11/04/2025:
[+] Fixed the 'Open Suggestion Form' opening the bug report form and the
'Open Bug Report Form' opening the suggestion form. My bad.
[+] Added Minecraft 1.12.2 [If the other Minecraft versions are laggy use
this.]
[+] Added Doki Doki Literature Club (Thanks for the suggestion Theo) [...
you guys are some weird individuals.]

11/01/2025:
[!] Hey again! Sorry for such a delay on the update, I've been a little busy
but I'm back.
[!] Shoutout to GN Math! Without them I wouldn't have these exclusive games!
:D
[+] Added Kindergarten 1
[+] Added Kindergarten 2
[+] Added Kindergarten 3
[+] Added Balatro
[+] Added Karlson
[+] Added Yandere Simulator
[+] Added Ultrakill
[+] Added Bendy and the Ink Machine
[+] Small UI improvements and "about us" section.
[-] Removed the survey banner as it isn't needed anymore (thanks for all
the feedback!)

09/27/2025:
[!] Hey! I'm probably going to take a small break from adding suggestions.