@@ -1073,7 +1073,8 @@
         "ULTRAKILL",
         "Yandere Simulator",
         "Doki Doki Literature Club",
-        "Friday Night Funkin'"
+        "Friday Night Funkin'",
+        "Hotline Miami"
     ],
     "Newly Added/Updated": [
         "Kindergarten",
@@ -1087,7 +1088,8 @@
         "Minecraft 1.12.2",
         "Minecraft 1.8.8",
         "Doki Doki Literature Club",
-        "Friday Night Funkin'"
+        "Friday Night Funkin'",
+        "Hotline Miami"
     ],
     "Horror": [
         "Baldi's Basics in Education and Learning",
@@ -1122,7 +1124,8 @@
         "Ragdoll Archers",
         "Getaway Shootout",
         "Karlson",
-        "ULTRAKILL"
+        "ULTRAKILL",
+        "Hotline Miami"
     ],
     "Classic": [
         "Angry Birds",
